--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "description": "Tool for generating a conlang",
   "main": "main.js",
   "scripts": {
-      "start": "electron ."
+    "start": "electron ."
+  },
+  "dependencies": {
+    "electron": "^11.2.3",
+    "electron-builder": "^22.9.1"
   }
 }
